--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
                <li><button class="btn-primary">Hire Me</button></li>
             </ul>
         </nav>
+        <!-- Banner -->
+         <div class="banner-container">
+            <div>
+                <h1>Hi I am</h1>
+                <h2>Mary Hardy</h2>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button>Contact</button>
+            </div>
+            <div class="image-container">
+                <img src="./images/hardy.png" alt="" class="developer-img">
+            </div>
+         </div>
     </header>
     <main></main>
     <footer></footer>
